--- a/templates/index.html
+++ b/templates/index.html
@@ -17,9 +17,10 @@
         <input type="text" name="movie_name" placeholder="Movie Name" required />
         <input type="submit" name="submit" value="Get Recommendation">
     </form>
+
     <div class="error">{{error}}</div>
 
-    <ul>
+    <ul class="movies">
         {% for movie in movies %}
         <li>{{movie}}</li>
         {% endfor %}
