--- a/templates/index.html
+++ b/templates/index.html
@@ -10,12 +10,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@300&display=swap" rel="stylesheet" />
 
-    <title>Movie Recommender</title>
+    <title>Movi Recommender</title>
 
 </head>
 
 <body>
-    <div class="Heading"><a href="\">MOVIE RECOMMENDER</a></div>
+    <div class="Heading"><a href="\">MOVI RECOMMENDER</a></div>
 
     <form class="movieForm" action="\submit" method="POST">
         <div>
