--- a/static/style.css
+++ b/static/style.css
@@ -72,3 +72,21 @@ a:any-link {
   font-size: 2.5em;
   color:#556052 ;
 }
+
+ul{
+  text-decoration: none;
+  list-style-type: none;
+  display:flex ;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px ;
+}
+
+nav li{
+  padding: 0 20px ;
+  text-transform: uppercase ;
+}
+
+.container{
+  margin-top: 10% ;
+}
