--- a/static/style.css
+++ b/static/style.css
@@ -1,92 +1,443 @@
+/* LANDING PAGE CSS */
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800&display=swap");
+
+
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Poppins', sans-serif;
+}
+
+.showcase{
+    position: absolute;
+    right: 0;
+    width: 100%;
+    min-height: 100vh;
+    padding: 100px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background: #111;
+    color: #fff;
+    z-index: 2;
+    transition: 0.5s;
+}
+
+.showcase.active{
+ right: 300px;
+}
+
+.showcase header{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 40px 70px;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.showcase ul{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    list-style: none;
+    padding-left: 300px;
+}
+
+.showcase ul li a{
+    text-decoration: none;
+    font-size: 18px;
+    color: #fff;
+    padding: 12px;
+}
+
+.logo{
+    text-transform: uppercase;
+    cursor: pointer;
+}
+
+
+.toggle{
+    position: relative;
+    width: 60px;
+    height: 60px;
+    background: url('https://i.ibb.co/HrfVRcx/menu.png');
+    background-repeat: no-repeat;
+    background-size: 30px;
+    background-position: center;
+    cursor: pointer;
+}
+
+.toggle.active{
+    background: url('https://i.ibb.co/rt3HybH/close.png');
+    background-repeat: no-repeat;
+    background-size: 25px;
+    background-position: center;     
+}
+
+
+.showcase video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.8;
+    /* transform: scale(150%); */
+}
+
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0,0,0,0.3);
+}
+
+.text{
+    position: relative;
+    right: 45em;
+    z-index: 10;
+    display: table-cell;
+    vertical-align: middle;
+}
+
+.theform{
+    position: absolute;
+    top: 50%;
+}
+
+.theform input{
+    width: 33em;
+    border-color: #111;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    background: rgba(255, 255, 255, 0.5);
+    color: #111;
+    margin: 10px 0px;
+    text-align: center;
+    height: 2.5em;
+
+}
+
+::placeholder{
+    color: #111;
+}
+
+.theform button{
+    text-align: center;
+    position: relative;
+    left: 122px;
+    font-size: 0.8em;
+    width: 13em;
+    border-color: #fff;
+    border-style: solid;
+    border-width: 1px;
+    border-radius: 5px;
+    background: rgba(0, 0, 0, 0.5);
+    color: #fff;
+    transition: 0.5s;
+}
+
+.theform button:hover{
+    transform: translateY(-5px);
+}
+
+
+/* CODEPEN */
+@import url('https://fonts.googleapis.com/css?family=Inconsolata:700');
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html,
 body {
-  margin: 0;
-  font-family: "Open Sans Condensed", sans-serif;
-  letter-spacing: 2px;
-  text-align: center;
+    width: 100%;
+    height: 100%;
 }
 
-.Heading {
-  text-decoration:none;
-  font-size: 3em;
-  margin: 7% 0 0 0;
+body {
+    background: #252525;
 }
 
-.heading a:-webkit-any-link,
-a:any-link {
-  text-decoration: none;
-  color: #8155BA;
+.container {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    width: 300px;
+    height: 100px;
 }
 
-.movieForm {
-  margin-top: 2%;
+.container .search {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 80px;
+    height: 80px;
+    background: rgba(255, 255, 255, 0.9);    
+    border-radius: 50%;
+    transition: all 1s;
+    z-index: 4;
+    box-shadow: 0 0 25px 0 rgba(0, 0, 0, 0.4);
 }
 
-.movieForm input {
-  border: 2px solid #BEAFC2;
-  border-radius: 30px;
-  height: 36px;
-  width: 40%;
-  text-align: center;
-  outline: none;
+.container .search:hover {
+    cursor: pointer;
 }
 
-.movieForm button {
-  margin: 1.2% 0 0 0;
-  background-color: #9088d4;
-  color: #ebcfc4;
-  border: 2px solid #556052;
-  border-radius: 30px;
-  height: 40px;
-  transition: all 0.18s;
+.container .search::before {
+    content: "";
+    position: absolute;
+    margin: auto;
+    top: 22px;
+    right: 0;
+    bottom: 0;
+    left: 22px;
+    width: 12px;
+    height: 2px;
+    background: white;
+    transform: rotate(45deg);
+    transition: all 0.5s;
 }
 
-.movieForm button:hover {
-  color: white;
-  box-shadow: 0 0.5em 0.5em -0.4em darkslateblue;
-  transform: translateY(-0.15em);
-  cursor: pointer;
+.container .search::after {
+    content: "";
+    position: absolute;
+    margin: auto;
+    top: -5px;
+    right: 0;
+    bottom: 0;
+    left: -5px;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    border: 2px solid white;
+    transition: all 0.5s;
 }
 
-.movies {
-  padding: 0;
-  top: 100px ;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-wrap: wrap;
+.container input {
+    font-family: 'Inconsolata', monospace;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 50px;
+    height: 50px;
+    outline: none;
+    border: none;
+    background: crimson;
+    color: white;
+    text-shadow: 0 0 10px crimson;
+    padding: 0 80px 0 20px;
+    border-radius: 30px;
+    box-shadow: 0 0 25px 0 crimson, 0 20px 25px 0 rgba(0, 0, 0, 0.2);
+    transition: all 1s;
+    opacity: 0;
+    z-index: 5;
+    font-weight: bolder;
+    letter-spacing: 0.1em;
 }
 
-.movies li {
-  list-style: none;
-  font-size: 1.5em;
-  font-weight: 800;
-  color: #26192c;
-  /* border: 2px solid black ; */
-  width: 30%;
-  margin: 1% 0;
-  justify-content: center;
+.container input:hover {
+    cursor: pointer;
 }
 
-.error {
-  margin: 2% 0 0 0 ;
-  font-size: 2.5em;
-  color:#556052 ;
+.container input:focus {
+    width: 300px;
+    opacity: 1;
+    cursor: text;
 }
 
-ul{
-  text-decoration: none;
-  list-style-type: none;
-  display:flex ;
-  align-items: center;
-  justify-content: center;
-  margin-top: 20px ;
+.container input:focus~.search {
+    right: -250px;
+    background: #151515;
+    z-index: 6;
 }
 
-nav li{
-  padding: 0 20px ;
-  text-transform: uppercase ;
+.container input:focus~.search::before {
+    top: 0;
+    left: 0;
+    width: 25px;
 }
 
-.container{
-  margin-top: 10% ;
+.container input:focus~.search::after {
+    top: 0;
+    left: 0;
+    width: 25px;
+    height: 2px;
+    border: none;
+    background: white;
+    border-radius: 0%;
+    transform: rotate(-45deg);
 }
+
+.container input::placeholder {
+    color: white;
+    opacity: 0.5;
+    font-weight: bolder;
+}
+
+
+/* COEPEN END */
+
+/* .text h2{
+    font-size: 5em;
+    font-weight: 800;
+    line-height: 1em;
+}
+
+.text h3{
+    font-size: 4em;
+    font-weight: 700;
+    line-height: 1em;
+}
+
+.text p{
+    font-size: 1em;
+    margin: 20px 0;
+    font-weight: 400;
+    max-width: 700px;
+}
+
+.text a{
+    display: inline-block;
+    font-size: 1em;
+    background: #fff;
+    padding: 10px 30px;
+    text-decoration: none;
+    color: #111;
+    margin-top: 10px;
+    transition: 0.2s;
+}
+
+.text a:hover{
+    letter-spacing: 3px;
+} */
+
+.social {
+    position: absolute;
+    right: 1em;
+    bottom: 20px;
+    z-index: 10;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    transition: 0.5s;
+}
+
+
+.social li{
+    list-style: none;
+    padding: 10px;
+}
+
+.social li a{
+    color: #fff;
+    display: inline-block;
+    filter: grayscale(1);
+    transition: 0.3s;
+    padding-right: 55px;
+
+}
+
+.social li a:hover{
+    transform: translateY(-10px) ;
+}
+
+.social.active{
+    right: 300px;
+}
+/* MOVIES STYLING */
+
+.movies{
+    position: absolute;
+    bottom: 2em;
+    left: 24em;
+    z-index: 200;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    color: white;
+    list-style: none;
+}
+
+
+.movies ul li{
+}
+
+/* ERROR */
+.error{
+    position: absolute;
+    bottom: 2em;
+    left: 30em;
+    z-index: 200;
+    background: rgba(0, 0, 0, 0.5);
+    border-radius: 5px;
+    color: white;
+    list-style: none;
+}
+
+
+.menu{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 300px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.menu ul{
+    position: relative;
+    list-style: none;
+}
+
+.menu ul li a{
+    text-decoration: none;
+    font-size: 24px;
+    color: #111;
+}
+
+.menu ui li a:hover{
+    color: aqua;
+}
+
+@media(max-width: 798px){
+    .showcase, .showcase header{
+        padding: 40px;
+    }
+
+    .showcase ul{
+        font-size: 14px;
+    }
+
+    .text h2{
+        font-size: 3em;
+    }
+    .text h3{
+        font-size: 1.5em;
+    }
+}
+
+
