--- a/templates/about-use.html
+++ b/templates/about-use.html
@@ -34,6 +34,8 @@
     </nav>
     <div class="container">
         <h1>Made with love ❤ by Shubh & Gaurav</h1>
+        <h1>(No love for Arnav and Raghav) </h1>
+        <p style= "font-size: 10px;">shubh is gay</p>
     </div>
 
 </body>
