--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 
   <!-- NAVBAR END -->
 
-  <video class="video" src="{{url_for('static', filename ='Films of 2019.mp4')}}" muted loop autoplay></video>
+  <video class="video" src="{{url_for('static', filename ='arnavraghavlund_Trim1.mp4')}}" muted loop autoplay></video>
 
   <div class="overlay"></div>
 
@@ -46,7 +46,9 @@
         <form action="\submit" method="POST">
           <input type="text" name="movie_name" placeholder="Movie name" required>
           <div class="search"></div>
-          <button type="Submit">Hit me</button>
+          <div class="button-div">
+          <button class="search-button rainbow rainbow-5" type="Submit">Hit me</button>
+          </div>
         </form>
       </div>
       <!-- CODEPEN END -->  
