changed video to be hosted in discord cdn, changed rainbow speed

--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,8 @@
 
   <!-- NAVBAR END -->
 
-  <video class="video" src="{{url_for('static', filename ='arnavraghavlund_Trim1.mp4')}}" muted loop autoplay></video>
+  <!-- <video class="video" src="{{url_for('static', filename ='arnavraghavlund_Trim1.mp4')}}" muted loop autoplay></video> -->
+  <video class="video" src="https://cdn.discordapp.com/attachments/759851314028216350/856592738518433909/arnavraghavlund_Trim1.mp4" muted loop autoplay></video>
 
   <div class="overlay"></div>
 
