Added noice icon and put discord link GG

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
-    <link rel="shortcut icon" href="{{ url_for('static' , filename='favicon.ico') }}" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ url_for('static' , filename='clapperboard.png') }}" type="image/x-icon">
+    <link rel="icon" href="{{ url_for('static' , filename='clapperboard.png') }}" type="image/x-icon">
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
@@ -14,7 +15,6 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="{{ url_for('static' , filename='style.css') }}" />
-    
     
     <title>Document</title>
 </head>
