--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,9 @@
 <!-- Navbar -->
 <section class="showcase">
   <header>
-    <h3 class="logo">Movie Recommendations</h3>
+    <a href="\">
+      <h3 class="logo"> Movie Recommendations</h3>
+    </a>
     <ul>
       <li>
         <a href="\">Home</a>
@@ -23,7 +25,9 @@
   <!-- NAVBAR END -->
 
   <!-- <video class="video" src="{{url_for('static', filename ='arnavraghavlund_Trim1.mp4')}}" muted loop autoplay></video> -->
-  <video class="video" src="https://cdn.discordapp.com/attachments/759851314028216350/856592738518433909/arnavraghavlund_Trim1.mp4" muted loop autoplay></video>
+  <video class="video"
+    src="https://cdn.discordapp.com/attachments/759851314028216350/856592738518433909/arnavraghavlund_Trim1.mp4" muted
+    loop autoplay></video>
 
   <div class="overlay"></div>
 
@@ -40,23 +44,23 @@
       <div></div>
       <button type="Submit">Hit me</button>
     </form> -->
-    <!-- END OF MY FORM -->
+  <!-- END OF MY FORM -->
 
-      <!-- CODEPEN -->
-      <div class="container">
-        <form action="\submit" method="POST">
-          <input type="text" name="movie_name" placeholder="Movie name" required>
-          <div class="search"></div>
-          <div class="button-div">
-          <button class="search-button rainbow rainbow-5" type="Submit">Hit me</button>
-          </div>
-        </form>
+  <!-- CODEPEN -->
+  <div class="container">
+    <form action="\submit" method="POST">
+      <input type="text" name="movie_name" placeholder="Movie name" required>
+      <div class="search"></div>
+      <div class="button-div">
+        <button class="search-button rainbow rainbow-5" type="Submit">Hit me</button>
       </div>
-      <!-- CODEPEN END -->  
-      
+    </form>
+  </div>
+  <!-- CODEPEN END -->
+
   </div>
 
-  
+
 </section>
 
 
@@ -73,7 +77,7 @@
       <a href=""><i class="fab fa-twitter"></i></a>
     </li>
     <li>
-      <a href=""><i class="fab fa-discord"></i></a>
+      <a href="https://discord.gg/rNXTdZdPGJ" target="_blank"><i class="fab fa-discord"></i></a>
     </li>
   </ul>
 </div>
