--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     />
     <link rel="stylesheet" href="{{ url_for('static' , filename='style.css') }}" />
     
-    <title>Document</title>
+    <title>Movie Recommender</title>
 </head>
 <body>
     {%block content%}
